Specify node version

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "triax-mvp",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
