--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "firebase": "^9.21.0",
+    "jstorm": "^0.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
