--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "firebase": "^9.21.0",
     "jstorm": "^0.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
